--- a/main.yaml
+++ b/main.yaml
@@ -47,8 +47,9 @@ ota:
     password: !secret ota_password
 
 wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
+  #ssid: !secret wifi_ssid
+  #password: !secret wifi_password
+  # use should add networks in is yml file.
 
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
